// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiselect component matches snapshot (closed) 1`] = `
<div>
  <div
    class="form-field form-field--multiselect"
  >
    <div
      class="multiselect"
    >
      <div
        class="chip__wrapper"
      >
        <label
          class=""
          for="name"
          id="name-label"
        />
        <span
          class="chip__wrapper__clear"
        >
          Clear all
        </span>
      </div>
      <div
        class="multiselect__input__container"
      >
        <div
          class="multiselect__input__container__chips"
        >
          <div
            class="chip chip--deletable chip--small"
          >
            <div
              class="chip__label"
            >
              Blaze 1
            </div>
            <div
              class="chip__icon chip__icon--delete"
            >
              <i
                class="material-icons"
              >
                clear
              </i>
            </div>
          </div>
          <div
            class="chip chip--deletable chip--small"
          >
            <div
              class="chip__label"
            >
              Blaze 2, multi main label
            </div>
            <div
              class="chip__icon chip__icon--delete"
            >
              <i
                class="material-icons"
              >
                clear
              </i>
            </div>
          </div>
          <div
            class="form-field form-field--input  "
          >
            <label
              class=""
              for="name"
            />
            <input
              aria-labelledby="name-label"
              aria-required="false"
              data-testid="input"
              id="name"
              placeholder="Choose..."
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Multiselect component matches snapshot when opened 1`] = `
<div>
  <div
    class="form-field form-field--multiselect"
  >
    <div
      class="multiselect"
    >
      <div
        class="chip__wrapper"
      >
        <label
          class=""
          for="name"
          id="name-label"
        />
        <span
          class="chip__wrapper__clear"
        >
          Clear all
        </span>
      </div>
      <div
        class="multiselect__input__container"
      >
        <div
          class="multiselect__input__container__chips"
        >
          <div
            class="chip chip--deletable chip--small"
          >
            <div
              class="chip__label"
            >
              Blaze 1
            </div>
            <div
              class="chip__icon chip__icon--delete"
            >
              <i
                class="material-icons"
              >
                clear
              </i>
            </div>
          </div>
          <div
            class="chip chip--deletable chip--small"
          >
            <div
              class="chip__label"
            >
              Blaze 2, multi main label
            </div>
            <div
              class="chip__icon chip__icon--delete"
            >
              <i
                class="material-icons"
              >
                clear
              </i>
            </div>
          </div>
          <div
            class="form-field form-field--input  "
          >
            <label
              class=""
              for="name"
            />
            <input
              aria-labelledby="name-label"
              aria-required="false"
              data-testid="input"
              id="name"
              placeholder="Choose..."
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="multiselect__dropdown"
      >
        <div
          style="height: 245px; overflow-y: auto; position: relative;"
        >
          <div
            style="height: 135px;"
          >
            <div
              data-row-index="0"
              style="position: absolute; top: 0px; left: 0px; width: 100%;"
            >
              <div
                class="form-field form-field--checkbox"
                role="button"
              >
                <input
                  checked=""
                  class="form-checkbox"
                  data-cy="multiselect-checkbox-cy-0"
                  data-testid="checkbox-1"
                  description="Lorem ipsum dolor."
                  id="1-checkbox"
                  index="0"
                  name="Blaze 1"
                  type="checkbox"
                  value=""
                />
                <div
                  class="form-field--checkbox-full"
                  data-testid="form-field-wrapper"
                >
                  <label
                    for="1-checkbox"
                    style="cursor: pointer;"
                  >
                    <span>
                      Blaze 1
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              data-row-index="1"
              style="position: absolute; top: 45px; left: 0px; width: 100%;"
            >
              <div
                class="form-field form-field--checkbox"
                role="button"
              >
                <input
                  checked=""
                  class="form-checkbox"
                  data-cy="multiselect-checkbox-cy-1"
                  data-testid="checkbox-2"
                  description="Lorem ipsum dolor."
                  id="2-checkbox"
                  index="1"
                  name="Blaze 2,multi main label,Sub label 1,sub label 2,sub label 3"
                  type="checkbox"
                  value=""
                />
                <div
                  class="form-field--checkbox-full"
                  data-testid="form-field-wrapper"
                >
                  <label
                    for="2-checkbox"
                    style="cursor: pointer;"
                  >
                    <span>
                      Blaze 2, multi main label
                    </span>
                    <span>
                      Sub label 1, sub label 2, sub label 3
                    </span>
                  </label>
                </div>
              </div>
            </div>
            <div
              data-row-index="2"
              style="position: absolute; top: 90px; left: 0px; width: 100%;"
            >
              <div
                class="form-field form-field--checkbox"
                role="button"
              >
                <input
                  class="form-checkbox"
                  data-cy="multiselect-checkbox-cy-2"
                  data-testid="checkbox-3"
                  description="Lorem ipsum dolor."
                  id="3-checkbox"
                  index="2"
                  name="Blaze 3,Sub label 1,sub label 2"
                  type="checkbox"
                  value=""
                />
                <div
                  class="form-field--checkbox-full"
                  data-testid="form-field-wrapper"
                >
                  <label
                    for="3-checkbox"
                    style="cursor: pointer;"
                  >
                    <span>
                      Blaze 3
                    </span>
                    <span>
                      Sub label 1, sub label 2
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
